--- a/process-mining-web/.settings/org.eclipse.wst.common.component
+++ b/process-mining-web/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,7 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/webapp"/>
         <property name="context-root" value="process-mining-web"/>
         <property name="java-output-path" value="/process-mining-web/build/classes"/>
     </wb-module>
