--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -19,16 +19,200 @@
         <![endif]-->
         <div id="split-container">
             <div id="graph-container" style="height: 460px; visibility: visible;">
-                <div id="graph" style="display: block; height: 1500px;"></div>
+                <div id="graph" style="display: block; height: 1500px; border: 1px solid #ccc;"></div>
             <div id="docs-container" style="display: none;"></div>
-            teste
             </div>
         </div>
+        
         <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
         <script th:src="@{/js/jquery.browser.min.js}"></script>
         <script th:src="@{/js/d3.v3.min.js}"></script>
         <script th:src="@{/js/colorbrewer.js}"></script>
         <script th:src="@{/js/geometry.js}"></script>
+        
+        
+        <script>
+            var config = {  
+            	    "title":"Database process documentation",
+            	    "graph":{  
+            	        "linkDistance":100,
+            	        "charge":-400,
+            	        "height":1800,
+            	        "numColors":12,
+            	        "labelPadding":{  
+            	            "left":12,
+            	            "right":5,
+            	            "top":12,
+            	            "bottom":5
+            	        },
+            	        "labelMargin":{  
+            	            "left":12,
+            	            "right":12,
+            	            "top":12,
+            	            "bottom":12
+            	        },
+            	        "ticksWithoutCollisions":50
+            	    },
+            	    "types":{  
+            	        "activity":{  
+            	            "short":"Activity",
+            	            "long":"Activity"
+            	        },
+            	        "parallel":{  
+            	            "short":"Parallel",
+            	            "long":"Parallel Gateway"
+            	        },
+            	        "end":{  
+            	            "short":"End",
+            	            "long":"End Event"
+            	        },
+            	        "start":{  
+            	            "short":"Start",
+            	            "long":"Start Event"
+            	        },
+            	    },
+            	    "constraints":[  
+            	        {
+            	            "has":{  
+            	                "type":"table"
+            	            },
+            	            "type":"position",
+            	            "y":0.1,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"view"
+            	            },
+            	            "type":"position",
+            	            "y":0.2,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query"
+            	            },
+            	            "type":"position",
+            	            "y":0.5,
+            	            "weight":0.5
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"database"
+            	            },
+            	            "type":"position",
+            	            "y":0.8,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"report"
+            	            },
+            	            "type":"position",
+            	            "y":1,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"report",
+            	                "group":"Intermediate"
+            	            },
+            	            "type":"position",
+            	            "y":0.8,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"report",
+            	                "group":"Reporting"
+            	            },
+            	            "type":"position",
+            	            "x":0.9,
+            	            "weight":0.8
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Data1"
+            	            },
+            	            "type":"position",
+            	            "x":0.15,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Data3"
+            	            },
+            	            "type":"position",
+            	            "x":0.2,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Data4"
+            	            },
+            	            "type":"position",
+            	            "x":0.2,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Data2"
+            	            },
+            	            "type":"position",
+            	            "x":0.5,
+            	            "weight":0.4
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Validation"
+            	            },
+            	            "type":"position",
+            	            "x":0.8,
+            	            "y":0.7,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Miscellaneous"
+            	            },
+            	            "type":"position",
+            	            "x":0.9,
+            	            "y":0.5,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query",
+            	                "group":"Management"
+            	            },
+            	            "type":"position",
+            	            "x":0.95,
+            	            "weight":0.7
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"query"
+            	            },
+            	            "type":"linkStrength",
+            	            "strength":0.25
+            	        },
+            	        {  
+            	            "has":{  
+            	                "type":"database"
+            	            },
+            	            "type":"linkStrength",
+            	            "strength":0.5
+            	        }
+            	    ],
+            	    "jsonUrl":"data/"
+            	};
+        </script>
         
         <script th:src="@{/js/script.js}"></script>
     
