--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -5,215 +5,336 @@
         <meta http-equiv="X-UA-Compatible" content="IE=Edge"/>
         <meta charset="utf-8" />
         <title>Database process documentation</title>
-        <link rel="stylesheet" th:src="@{css/bootstrap.css}"/>
-        <link rel="stylesheet" th:src="@{css/style.css}"/>
-        <link rel="stylesheet" th:src="@{css/svg.css}"/>
+        <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
+        <link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/svg.css}"/>
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        
     </head>
     <body>
-        <!--[if lt IE 9]>
-        <div class="unsupported-browser">
-            This website does not fully support your browser.  Please get a
-            better browser (Firefox or <a href="/chrome/">Chrome</a>, or if you
-            must use Internet Explorer, make it version 9 or greater).
-        </div>
-        <![endif]-->
-        <div id="split-container">
-            <div id="graph-container" style="height: 460px; visibility: visible;">
-                <div id="graph" style="display: block; height: 1500px; border: 1px solid #ccc;"></div>
-            <div id="docs-container" style="display: none;"></div>
+    	<div class="nav"><a href="#content">Ir para conteudo</a> 	</div>
+    	<div class="nav fixed">
+  			<div class="nav-title">Web Process <br/><span>Miner</span></div>
+			  <a class="nav-button" href="#">Upload</a>
+			  <a class="nav-button" href="#">Select Data</a>
+			  <a class="nav-button active" href="#">Analyse</a>
+		</div>
+    
+    
+ 		<div id="split-container">
+            
+            <div id="doc-menus">
+				<div id="accordion">
+				  <h3>Densidade</h3>
+				  <div>
+						<div class="sliders" id="densitySlider"></div>
+				  </div>
+				  <h3>Atividades</h3>
+				  <div>
+				    <ul id="list-activities"></ul>
+				  </div>
+				 
+				  <h3>Estatísticas</h3>
+				  <div id="docs" class="docs">
+				    <p>
+				    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
+				    Phasellus pellentesque purus in massa. Aenean in pede. Phasellus ac libero
+				    ac tellus pellentesque semper. Sed ac felis. Sed commodo, magna quis
+				    lacinia ornare, quam ante aliquam nisi, eu iaculis leo purus venenatis dui.
+				    </p>
+				    <ul>
+				      <li>List item one</li>
+				      <li>List item two</li>
+				      <li>List item three</li>
+				    </ul>
+				  </div>
+				  <h3>Conformidade</h3>
+				  <div>
+				  	<br/>
+				  	<a class="btn btn-default" href="#">Replay</a><br/><br/>
+				  	Esta execução irá animar o comportamento das instâncias desse processo, possibilitando
+				  	a visualização dos seguintes problemas :
+				  	<ul>
+				      <li>Repetições de ciclos</li>
+				      <li>Gargalos/Atrasos</li>
+				    </ul>
+				  	<br/>
+				  	<a class="btn btn-default" href="#">Exportar Processo</a><br/><br/>
+				  	Transforme o processo gerado em um formato utilizável por outras ferramentas.
+				  </div>
+				</div>            	
+
+            	
+            
             </div>
+            <div id="graph-container">
+                <div id="graph" style="margin-right: 200px;"></div>
+            </div>
+            <div id="docs-container">
+                <a id="docs-close" href="#">&times;</a>
+                <div id="docs" class="docs"></div>
+            </div>
+            
+            
         </div>
         
         <script th:src="@{/js/jquery-1.10.2.min.js}"></script>
         <script th:src="@{/js/jquery.browser.min.js}"></script>
+        <script th:src="@{/js/jquery-ui.accordion.min.js}"></script>
+        <script th:src="@{/js/jquery.nouislider.min.js}"></script>
         <script th:src="@{/js/d3.v3.min.js}"></script>
         <script th:src="@{/js/colorbrewer.js}"></script>
         <script th:src="@{/js/geometry.js}"></script>
         
         
         <script>
-            var config = {  
-            	    "title":"Database process documentation",
-            	    "graph":{  
-            	        "linkDistance":100,
-            	        "charge":-400,
-            	        "height":1800,
-            	        "numColors":12,
-            	        "labelPadding":{  
-            	            "left":12,
-            	            "right":5,
-            	            "top":12,
-            	            "bottom":5
-            	        },
-            	        "labelMargin":{  
-            	            "left":12,
-            	            "right":12,
-            	            "top":12,
-            	            "bottom":12
-            	        },
-            	        "ticksWithoutCollisions":50
-            	    },
-            	    "types":{  
-            	        "activity":{  
-            	            "short":"Activity",
-            	            "long":"Activity"
-            	        },
-            	        "parallel":{  
-            	            "short":"Parallel",
-            	            "long":"Parallel Gateway"
-            	        },
-            	        "end":{  
-            	            "short":"End",
-            	            "long":"End Event"
-            	        },
-            	        "start":{  
-            	            "short":"Start",
-            	            "long":"Start Event"
-            	        },
-            	    },
-            	    "constraints":[  
-            	        {
-            	            "has":{  
-            	                "type":"table"
-            	            },
-            	            "type":"position",
-            	            "y":0.1,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"view"
-            	            },
-            	            "type":"position",
-            	            "y":0.2,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query"
-            	            },
-            	            "type":"position",
-            	            "y":0.5,
-            	            "weight":0.5
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"database"
-            	            },
-            	            "type":"position",
-            	            "y":0.8,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"report"
-            	            },
-            	            "type":"position",
-            	            "y":1,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"report",
-            	                "group":"Intermediate"
-            	            },
-            	            "type":"position",
-            	            "y":0.8,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"report",
-            	                "group":"Reporting"
-            	            },
-            	            "type":"position",
-            	            "x":0.9,
-            	            "weight":0.8
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Data1"
-            	            },
-            	            "type":"position",
-            	            "x":0.15,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Data3"
-            	            },
-            	            "type":"position",
-            	            "x":0.2,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Data4"
-            	            },
-            	            "type":"position",
-            	            "x":0.2,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Data2"
-            	            },
-            	            "type":"position",
-            	            "x":0.5,
-            	            "weight":0.4
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Validation"
-            	            },
-            	            "type":"position",
-            	            "x":0.8,
-            	            "y":0.7,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Miscellaneous"
-            	            },
-            	            "type":"position",
-            	            "x":0.9,
-            	            "y":0.5,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query",
-            	                "group":"Management"
-            	            },
-            	            "type":"position",
-            	            "x":0.95,
-            	            "weight":0.7
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"query"
-            	            },
-            	            "type":"linkStrength",
-            	            "strength":0.25
-            	        },
-            	        {  
-            	            "has":{  
-            	                "type":"database"
-            	            },
-            	            "type":"linkStrength",
-            	            "strength":0.5
-            	        }
-            	    ],
+        
+        $(document).ready(function(){
+        	$("#densitySlider").noUiSlider({
+        		start: 0,
+        		orientation: "vertical",
+        		range: {
+        			'min': 0,
+        			'max': 100
+        		}
+        	});
+        });
+        
+        var config = {
+                "title": "Database process documentation",
+                "graph": {
+                    "linkDistance": 100,
+                    "charge": -400,
+                    "height": 1500,
+                    "numColors": 12,
+                    "labelPadding": {
+                        "left": 3,
+                        "right": 3,
+                        "top": 2,
+                        "bottom": 2
+                    },
+                    "labelMargin": {
+                        "left": 3,
+                        "right": 3,
+                        "top": 2,
+                        "bottom": 2
+                    },
+                    "ticksWithoutCollisions": 40
+                },
+                "types": {
+                    "view": {
+                        "short": "View",
+                        "long": "Database view"
+                    },
+                    "table": {
+                        "short": "Table",
+                        "long": "Database table"
+                    },
+                    "query": {
+                        "short": "Query",
+                        "long": "Database query"
+                    },
+                    "sas": {
+                        "short": "SAS project",
+                        "long": "SAS project"
+                    },
+                    "extract": {
+                        "short": "ETL process",
+                        "long": "Extract-transform-load process"
+                    },
+                    "database": {
+                        "short": "Access database",
+                        "long": "Access database"
+                    },
+                    "report": {
+                        "short": "Report",
+                        "long": "Report"
+                    }
+                },
+                "constraints": [{
+                    "has": {
+                        "name": "SASProject.egp"
+                    },
+                    "type": "position",
+                    "x": 0.15,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "name": "ETL process 1"
+                    },
+                    "type": "position",
+                    "x": 0.3,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "name": "ETL process 2"
+                    },
+                    "type": "position",
+                    "x": 0.45,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "name": "ETL process 4"
+                    },
+                    "type": "position",
+                    "x": 0.6,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "name": "ETL process 3"
+                    },
+                    "type": "position",
+                    "x": 0.75,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "name": "ETL process 5"
+                    },
+                    "type": "position",
+                    "x": 0.9,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "extract"
+                    },
+                    "type": "position",
+                    "y": 0,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "sas"
+                    },
+                    "type": "position",
+                    "y": 0,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "table"
+                    },
+                    "type": "position",
+                    "y": 0.1,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "view"
+                    },
+                    "type": "position",
+                    "y": 0.2,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "query"
+                    },
+                    "type": "position",
+                    "y": 0.5,
+                    "weight": 0.5
+                }, {
+                    "has": {
+                        "type": "database"
+                    },
+                    "type": "position",
+                    "y": 0.8,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "report"
+                    },
+                    "type": "position",
+                    "y": 1,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "report",
+                        "group": "Intermediate"
+                    },
+                    "type": "position",
+                    "y": 0.8,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "report",
+                        "group": "Reporting"
+                    },
+                    "type": "position",
+                    "x": 0.9,
+                    "weight": 0.8
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Data1"
+                    },
+                    "type": "position",
+                    "x": 0.15,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Data3"
+                    },
+                    "type": "position",
+                    "x": 0.2,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Data4"
+                    },
+                    "type": "position",
+                    "x": 0.2,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Data2"
+                    },
+                    "type": "position",
+                    "x": 0.5,
+                    "weight": 0.4
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Validation"
+                    },
+                    "type": "position",
+                    "x": 0.8,
+                    "y": 0.7,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Miscellaneous"
+                    },
+                    "type": "position",
+                    "x": 0.9,
+                    "y": 0.5,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query",
+                        "group": "Management"
+                    },
+                    "type": "position",
+                    "x": 0.95,
+                    "weight": 0.7
+                }, {
+                    "has": {
+                        "type": "query"
+                    },
+                    "type": "linkStrength",
+                    "strength": 0.25
+                }, {
+                    "has": {
+                        "type": "database"
+                    },
+                    "type": "linkStrength",
+                    "strength": 0.5
+                }],
             	    "jsonUrl":"data/"
             	};
         </script>
         
+        <script th:src="@{/js/view/activitiesSelector.js}"></script>
         <script th:src="@{/js/script.js}"></script>
     
 
