--- a/process-mining-web/src/main/webapp/resources/css/style.css
+++ b/process-mining-web/src/main/webapp/resources/css/style.css
@@ -3,6 +3,7 @@ html, body {
     margin: 0;
     width: 100%;
     height: 100%;
+    background: #e0e0e0;
 }
 
 html.lt-ie9, html.lt-ie9 body {
@@ -48,8 +49,7 @@ html.lt-ie9 #graph-container {
 
 #graph-container {
     width: 100%;
-    height: 300px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     visibility: hidden;
 }
 
@@ -103,4 +103,118 @@ html.lt-ie9 #graph-container {
 }
 .docs .select-object.missing {
     color: #c7254e;
+}
+
+ul.list-activities{
+	margin:0px;
+	padding: 5px 0px;;
+}
+
+ul.list-activities li{
+	list-style-type:none;
+	padding:5px;	
+}
+
+.color-activity{
+	display:block;
+	height: 12px;
+	width: 12px;
+	float:left;
+	margin: 4px 2px 0px 0px;
+}
+
+#doc-menus{
+	width:270px; 
+	right:0px; 
+	height: 500px; 
+	position:fixed;
+	padding: 0px 7px;
+}
+
+.ui-accordion h3.ui-accordion-header{
+	border: 1px solid #ddd;
+	box-shadow: 1px 1px 1px #444;
+	background: #fff;
+	margin: 7px 0 0 0;
+  	padding: 1em 1em;
+}
+
+.ui-accordion h3.ui-accordion-header:focus{
+	border: 1px solid #ddd;
+}
+.ui-accordion h3.ui-accordion-header.ui-accordion-header-active{
+	box-shadow: 1px 0px 1px #444;
+}
+
+.ui-accordion div.ui-accordion-content{
+  display: block;
+  height: 233px;
+  overflow: auto;
+  background: #fff;
+  border: 1px solid #ddd;
+  border-top: 0px none #eee;
+  box-shadow: 1px 1px 1px #444;
+  margin-top: 0px;
+  z-index: 235677;
+  padding: 0em 1em;
+}
+
+.sliders{
+	display:block; 
+	height: 180px;
+	margin: 20px 100px;
+	padding-top:10px;
+}
+
+.nav {
+	width: 100%;
+    height: 60px;
+    background: #555;
+    border: 1px solid black;
+    box-shadow: 1px 0px 1px #999;
+}
+
+.nav.fixed {
+	position:fixed;
+	top: 0px;
+  	z-index: 10;
+}
+
+.nav .nav-title{
+    text-align: center;
+    float: left;
+    padding: 6px 11px;
+    font-family: -webkit-pictograph;
+    font-weight: bolder;
+    line-height: 20px;
+    color: white;
+    font-size: 19px;
+    text-shadow: 1px 1px 1px #000;
+}
+
+.nav .nav-title span{
+    font-size: 31px;
+}
+
+.nav .nav-button{
+    margin-left: 5px;
+    padding: 19px 29px;
+    float: left;
+    position: initial;
+    display: block;
+    font-weight: bold;
+    color: #eee;
+    text-shadow: 1px 1px 0px #000;
+}
+
+.nav .nav-button:hover,
+.nav .nav-button:active, 
+.nav .nav-button:visited, 
+.nav .nav-button:focus{
+	text-decoration: none;
+}
+
+.nav .nav-button.active{
+	color: #fff;
+	background: #666;
 }
