--- a/process-mining-web/src/main/webapp/resources/css/style.css
+++ b/process-mining-web/src/main/webapp/resources/css/style.css
@@ -1,10 +1,3 @@
-html, body {
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background: #e0e0e0;
-}
 
 html.lt-ie9, html.lt-ie9 body {
     width: auto;
@@ -19,6 +12,7 @@ html.lt-ie9, html.lt-ie9 body {
     background: url(ie-notice.png) no-repeat center left;
     display: none;
 }
+
 html.lt-ie9 .unsupported-browser {
     display: block;
 }
@@ -48,9 +42,11 @@ html.lt-ie9 #graph-container {
 }
 
 #graph-container {
-    width: 100%;
-    overflow-y: hidden;
-    visibility: hidden;
+  overflow-y: hidden;
+  visibility: hidden;
+  background: #f9f9f9;
+  margin-right: 280px;
+  margin-left: 10px;
 }
 
 #docs-container {
@@ -166,55 +162,3 @@ ul.list-activities li{
 	padding-top:10px;
 }
 
-.nav {
-	width: 100%;
-    height: 60px;
-    background: #555;
-    border: 1px solid black;
-    box-shadow: 1px 0px 1px #999;
-}
-
-.nav.fixed {
-	position:fixed;
-	top: 0px;
-  	z-index: 10;
-}
-
-.nav .nav-title{
-    text-align: center;
-    float: left;
-    padding: 6px 11px;
-    font-family: -webkit-pictograph;
-    font-weight: bolder;
-    line-height: 20px;
-    color: white;
-    font-size: 19px;
-    text-shadow: 1px 1px 1px #000;
-}
-
-.nav .nav-title span{
-    font-size: 31px;
-}
-
-.nav .nav-button{
-    margin-left: 5px;
-    padding: 19px 29px;
-    float: left;
-    position: initial;
-    display: block;
-    font-weight: bold;
-    color: #eee;
-    text-shadow: 1px 1px 0px #000;
-}
-
-.nav .nav-button:hover,
-.nav .nav-button:active, 
-.nav .nav-button:visited, 
-.nav .nav-button:focus{
-	text-decoration: none;
-}
-
-.nav .nav-button.active{
-	color: #fff;
-	background: #666;
-}
