--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}"/>
         <link rel="stylesheet" th:href="@{/css/svg.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
+        <link rel="stylesheet" th:href="@{/css/visualization.css}"/>
         
     </head>
     <body>
