--- a/process-mining-web/src/main/resources/templates/adjust.html
+++ b/process-mining-web/src/main/resources/templates/adjust.html
@@ -5,14 +5,15 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 		<meta charset="utf-8" />
 		<title>Database process documentation</title>
-		<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
-		<link rel="stylesheet" th:href="@{/css/all.css}" />
-		<link rel="stylesheet" th:href="@{/css/dropzone.css}" />
-		<link rel="stylesheet" th:href="@{/css/home.css}" />
-	
+        <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
+        <link rel="stylesheet" th:href="@{/css/all.css}"/>
+        <link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}"/>
+        <link rel="stylesheet" th:href="@{/css/svg.css}"/>
+        <link rel="stylesheet" th:href="@{/css/style.css}"/>
 	</head>
 	<body>
-		<span th:include="commun/header :: process-menu (isHome=true)"></span>
+		<span th:include="commun/header :: process-menu (active=1)"></span>
 	
 		<div class="container">
 			<div class="jumbotron">
@@ -26,22 +27,15 @@
 				<img th:src="@{/img/home/process-data.png}" /> 
 				<img th:src="@{/img/home/process.png}" /> 
 				<img th:src="@{/img/home/value-generated.png}" />
-				
-				<svg width="200px" height="200px" viewBox="0 0 200 200">
-					<path fill="#496480" d="M156.852,80.245c-1.754,0-4.427,0.145-7.807,0.4c-1.394-15.501-14.414-27.651-30.277-27.651  c-5.798,0-11.216,1.623-15.826,4.438c-7.094-6.593-16.595-10.631-27.044-10.631c-21.951,0-39.743,17.794-39.743,39.746  c0,1.944,0.146,3.854,0.416,5.725c-15.862,1.082-28.397,14.285-28.397,30.425c0,16.846,13.657,30.503,30.503,30.503  c14.156,0,102.897,0,118.176,0c20.143,0,36.476-16.33,36.476-36.479C193.327,96.579,176.994,80.245,156.852,80.245z   "/>
-				</svg>
-			</div>
-			<div class="jumbotron">
 				<form action="/upload" id="processDropzone" class="dropzone" enctype="multipart/form-data">
 				</form>
 			</div>
-			
+	
 		</div>
 	
 		<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
 		<script th:src="@{/js/d3.v3.min.js}"></script>
 		<script th:src="@{/js/home/dropzone.js}"></script>
-		<script th:src="@{/js/home/home.js}"></script>
 	
 	</body>
 </html>
