--- a/process-mining-web/src/main/resources/templates/adjust.html
+++ b/process-mining-web/src/main/resources/templates/adjust.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-		<meta charset="utf-8" />
-		<title>Database process documentation</title>
-        <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-        <link rel="stylesheet" th:href="@{/css/all.css}"/>
-        <link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}"/>
-        <link rel="stylesheet" th:href="@{/css/svg.css}"/>
-        <link rel="stylesheet" th:href="@{/css/style.css}"/>
-	</head>
-	<body>
-		<span th:include="commun/header :: process-menu (active=1)"></span>
-	
-		<div class="container">
-			<div class="jumbotron">
-				<h2>Ja imaginou minerar dados e produzir processos pela web?</h2>
-				<ul>
-					<li>Minere processos diretamente de onde estiver.</li>
-					<li>Sem precisar instalar softwares complexos.</li>
-				</ul>
-				<h3>Como funciona?</h3>
-				<img th:src="@{/img/home/company.png}" /> 
-				<img th:src="@{/img/home/process-data.png}" /> 
-				<img th:src="@{/img/home/process.png}" /> 
-				<img th:src="@{/img/home/value-generated.png}" />
-				<form action="/upload" id="processDropzone" class="dropzone" enctype="multipart/form-data">
-				</form>
+<head>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+	<meta charset="utf-8" />
+	<title>Event log adjusts</title>
+	<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />
+	<link rel="stylesheet" th:href="@{/css/all.css}" />
+	<link rel="stylesheet" th:href="@{/css/jquery-ui.accordion.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/jquery.nouislider.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/adjust.css}" />
+</head>
+<body>
+	<span th:include="commun/header :: process-menu (active=2)"></span>
+
+	<div id="split-container">
+
+		<div id="doc-menus">
+			<div id="accordion">
+				<h3>UID Processo</h3>
+				<div>Este é um indicador único que representa a instancia do
+					processo.</div>
+				<h3>Atividade</h3>
+				<div>Selecione a coluna representando as atividades do
+					processo.</div>
+
+				<h3>Data/hora de término</h3>
+				<div>Selecione a coluna que represente o término da atividade.
+				</div>
+
+				<h3>Executor</h3>
+				<div>Defina o executor responsável pela atividade.</div>
+
+				<h3>Data/hora de inicio</h3>
+				<div>Selecione a coluna que represente o ínicio da atividade.
+				</div>
+
 			</div>
-	
+
 		</div>
-	
-		<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
-		<script th:src="@{/js/d3.v3.min.js}"></script>
-		<script th:src="@{/js/home/dropzone.js}"></script>
-	
-	</body>
+
+
+	</div>
+		<div id="adjust-container"> aaa </div>
+
+	<script th:src="@{/js/jquery-1.10.2.min.js}"></script>
+	<script th:src="@{/js/jquery.browser.min.js}"></script>
+	<script th:src="@{/js/jquery-ui.accordion.min.js}"></script>
+	<script th:src="@{/js/view/adjust.js}"></script>
+
+</body>
 </html>
