--- a/process-mining-web/src/main/webapp/resources/css/adjust.css
+++ b/process-mining-web/src/main/webapp/resources/css/adjust.css
@@ -5,6 +5,16 @@
 	margin-left: 10px;
 }
 
+#docs-menus .completed-proportion{
+	background: transparent;
+    color: white;
+    text-shadow: 1px 1px black;
+    position: relative;
+    float: left;
+    display: block;
+    padding: 11px;
+}
+
 #docs-container {
 	width: 100%;
 	height: 300px;
@@ -140,16 +150,18 @@ ul.list-activities li {
 
 .ui-accordion div.ui-accordion-content {
 	display: block;
+	color:black;
 	overflow: hidden;
 	background: #fff;
 	opacity: 0.7;
 	border: 1px solid #ddd;
 	border-top: 0px none #eee;
 	box-shadow: 1px 1px 1px #444;
+	text-shadow: 1px 1px 0px white;
 	margin-top: 2px;
 	z-index: 4;
 	padding: 5px;
-	font-size: 10px;
+	font-size: 11px;
 	margin-left: 4px;
 	margin-right: 4px;
 }
