--- a/process-mining-web/src/main/webapp/resources/css/process/xtrace.css
+++ b/process-mining-web/src/main/webapp/resources/css/process/xtrace.css
@@ -45,9 +45,9 @@
 }
 
 .graph .node rect {
-	fill: #FFF2CC;
-	stroke-width: 1px;
-	stroke: #A16D00;
+	fill: #DAE3F4;
+  	stroke-width: 1px;
+  	stroke: #7E8BB6;
 	box-shadow : 1px 1px solid #333
 }
 
@@ -74,7 +74,6 @@
 
 .graph .edge {
 	fill: none;
-	stroke-width: 2.5px;
 	stroke: #A7B2AE;
 	opacity: 0;
 }
