Adicionado barra e bind no accordion para carregar dados das tuplas a animar

--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -22,17 +22,17 @@
             
             <div id="doc-menus">
 				<div id="accordion">
-				  <h3>Densidade</h3>
+				  <h3 id="h3Densidade">Densidade</h3>
 				  <div>
 						<div class="sliders" id="densitySlider"></div>
 						<div class="sliders" id="activitySlider"></div>
 				  </div>
-				  <h3>Atividades</h3>
+				  <h3 id="h3Atividades">Atividades</h3>
 				  <div>
 				    <ul id="list-activities"></ul>
 				  </div>
 				 
-				  <h3>Estatísticas</h3>
+				  <h3 id="h3Estatisticas">Estatísticas</h3>
 				  <div id="docs" class="docs">
 				    <p>
 				    Nam enim risus, molestie et, porta ac, aliquam ac, risus. Quisque lobortis.
@@ -46,7 +46,7 @@
 				      <li>List item three</li>
 				    </ul>
 				  </div>
-				  <h3>Conformidade</h3>
+				  <h3 id="h3Conformidade">Conformidade</h3>
 				  <div>
 				  	<br/>
 				  	<a class="btn btn-default" href="#">Replay</a><br/><br/>
