--- a/process-mining-web/src/main/webapp/resources/css/process/xtrace.css
+++ b/process-mining-web/src/main/webapp/resources/css/process/xtrace.css
@@ -2,19 +2,32 @@
 	cursor: default
 }
 
-.graph.animate .node {
+.graph.graph-main .node {
 	opacity: 0;
 	transition: fill 0.5s, stroke 0.5s, opacity 1s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, opacity 1s;
 }
 
-.graph.animate .node.visible {
+.graph.graph-main .node rect.node-end-event {
+	fill:#F7D89F;
+  	stroke-width: 4px;
+  	stroke: #CF6A6A;
+}
+
+.graph.graph-main .node rect.node-start-event {
+	stroke: #325C3F;
+  	fill: #80D79C;
+  	stroke-width: 2px;
+}
+
+
+.graph.graph-main .node.visible {
 	opacity: 1;
 	transition: fill 0.5s, stroke 0.5s, opacity 0.5s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, opacity 0.5s;
 }
 
-.graph.animate .node.visible.entering {
+.graph.graph-main .node.visible.entering {
 	transition: fill 0.5s, stroke 0.5s, opacity 1.5s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, opacity 1.5s;
 }
@@ -23,7 +36,7 @@
 	opacity: 0.2;
 }
 
-.hovering .graph.animate .node.visible {
+.hovering .graph.graph-main .node.visible {
 	transition: fill 0.5s, stroke 0.5s, opacity 0.4s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, opacity 0.4s;
 }
@@ -51,7 +64,7 @@
 	box-shadow : 1px 1px solid #333
 }
 
-.graph.animate .node rect {
+.graph.graph-main .node rect {
 	transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s;
 }
@@ -78,7 +91,7 @@
 	opacity: 0;
 }
 
-.graph.animate .edge {
+.graph.graph-main .edge {
 	transition: fill 0.1s, stroke 0.1s, stroke-width 0.1s, opacity 0.3s;
 	-webkit-transition: fill 0.1s, stroke 0.1s, stroke-width 0.1s, opacity
 		0.3s;
@@ -106,13 +119,13 @@
 	opacity: 1;
 }
 
-.graph.animate .edge.visible {
+.graph.graph-main .edge.visible {
 	transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity 0.5s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity
 		0.5s;
 }
 
-.graph.animate .edge.visible.entering {
+.graph.graph-main .edge.visible.entering {
 	transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity 1.5s;
 	transition-delay: 0, 0, 0, 0.5s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity
@@ -120,11 +133,16 @@
 	-webkit-transition-delay: 0, 0, 0, 0.5s;
 }
 
+.graph.graph-main.replay .edge.visible{
+	stroke-width:2.5px;
+	stroke: #AAB4D1;
+}
+
 .hovering .graph .edge.visible {
 	opacity: 0.1;
 }
 
-.hovering .graph.animate .edge.visible {
+.hovering .graph.graph-main .edge.visible {
 	transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity 0.4s;
 	-webkit-transition: fill 0.5s, stroke 0.5s, stroke-width 0.5s, opacity
 		0.4s;
