--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -47,7 +47,7 @@
 				    </ul>
 				  </div>
 				  <h3 id="h3Conformidade">Conformidade</h3>
-				  <div>
+				  <div id="conformidadeContent">
 				  	<br/>
 				  	<a class="btn btn-default" href="#">Replay</a><br/><br/>
 				  	Esta execução irá animar o comportamento das instâncias desse processo, possibilitando
