--- a/process-mining-web/src/main/webapp/resources/css/process/visualization.css
+++ b/process-mining-web/src/main/webapp/resources/css/process/visualization.css
@@ -17,12 +17,6 @@ html.lt-ie9 .unsupported-browser {
     display: block;
 }
 
-.nav-button {
-    position: absolute;
-    top: 8px;
-    left: 8px;
-}
-
 #docs-list {
     margin: 50px 8px 8px 8px;
 }
@@ -42,11 +36,11 @@ html.lt-ie9 #graph-container {
 }
 
 #graph-container {
-  overflow-y: hidden;
-  visibility: hidden;
-  background: #f9f9f9;
-  margin-right: 280px;
-  margin-left: 10px;
+	  overflow-y: hidden;
+	  visibility: hidden;
+	  background: #f9f9f9;
+	  margin-right: 280px;
+	  margin-left: 10px;
 }
 
 #docs-container {
@@ -166,5 +160,81 @@ ul.list-activities li{
 .sliders span{
   margin-top: 20px;
   display: block;
+}
+
+.nav-button {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+}
+
+
+.right-options .nav-tabs > li > a {
+	margin-right: 2px;
+	line-height: 1.428571429;
+	/* border: 1px solid rgba(0, 0, 0, 0); */
+	border-radius: 4px 4px 0 0;
+	background-color: rgba(252, 252, 252, 0.72);
+	border: 1px solid #DDD;
+}
+
+.right-options .nav-tabs.nav{
+  background-color: rgba(249, 249, 249, 0.59);
+  border-radius: 4px 4px 0 0;
+}
+
+.right-options .nav-tabs > li.active > a, 
+.right-options .nav-tabs > li.active > a:hover, 
+.right-options .nav-tabs > li.active > a:focus {
+  color: #555;
+  cursor: default;
+  background-color: #FFF;
+  border: 1px solid #DDD;
+  border-bottom-color: rgba(0, 0, 0, 0);
+}
+
+.right-options .tab-content h2{
+  margin-top: -4px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid #CCC;
+  font-size: 24px;
+}
+
+.right-options button.btn-default.disabled,
+.right-options fieldset[disabled] button.btn-default{
+	color: #444;
+}
+.right-options button.btn-default{
+	color: #333;
+}
+.right-options button.btn-default.btn-play{
+	color :#49B249;
+}
+
+.right-options button.btn-default.btn-stop{
+	color :firebrick;
+}
+
+.right-options .fill{
+	width:100%;
+	height: 130px;
+	background: #f0f0f0;
+	box-shadow: 0px 2px 4px #888 inset;
+}
+
+.right-options .viewfinder{
+	fill: #28DD31;
+  	stroke-width: 3px;
+}
+
+.tab-content div.content{
+	background: url("../../img/preLoader.gif") -41px 0px;
+	min-height: 200px;
+}
+
+
+.right-options button.btn-default.disabled,
+.right-options fieldset[disabled] button.btn-default{
+	color: #444;
 }
 
