Adicionado funcionalidade de remover nó e exibi-lo, junto a união do evento click do nó com a seleção da listagem de atividades. Tambem ajustado a velocidade da animação

--- a/process-mining-web/src/main/resources/templates/process/visualization.html
+++ b/process-mining-web/src/main/resources/templates/process/visualization.html
@@ -88,7 +88,7 @@
 		<!-- Para que está sendo usado esse javascript? -->
 		<script th:src="@{/js/geometry.js}"></script> 
         
-        <script th:src="@{/js/ bootstrap.tab.min.js}"></script>
+        <script th:src="@{/js/ bootstrap.tab.min.js}"></script> 
        
         
 		<script type="text/javascript" th:src="@{/js/process/dagre.js}"></script>
@@ -103,6 +103,7 @@
 		<script type="text/javascript" th:src="@{/js/process/utils/List.js}"></script>
 		<script type="text/javascript" th:src="@{/js/process/utils/Selectable.js}"></script>
 		<script type="text/javascript" th:src="@{/js/process/utils/jquery.tipsy.js}"></script>
+		<script type="text/javascript" th:src="@{/js/process/utils/jquery.contextMenu.js}"></script>
 		<script type="text/javascript" th:src="@{/js/process/ProcessMiningUtils.js}"></script>
 		<script type="text/javascript" th:src="@{/js/process/ProcessMiningViewportController.js}"></script>
      
